--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,10 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="title_activity_location">LocationActivity</string>
+    <string name="uname_hint">用户名/邮箱/手机号</string>
+    <string name="pword_hint">密码</string>
+    <string name="check_code_hint">验证码</string>
+    <string name="login">登录</string>
+    <string name="register">快速注册</string>
+    <string name="union_login">使用合作网站账号登录</string>
 </resources>
