--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,7 +7,14 @@
     <string name="uname_hint">用户名/邮箱/手机号</string>
     <string name="pword_hint">密码</string>
     <string name="check_code_hint">验证码</string>
-    <string name="login">登录</string>
+    <string name="login">账号登录</string>
+    <string name="qucik_login">快速登录</string>
     <string name="register">快速注册</string>
     <string name="union_login">使用合作网站账号登录</string>
+
+    <string name="show_image_only_wifi">仅wifi下显示图片</string>
+    <string name="set_remind">消息提醒</string>
+    <string name="share_setting">分享设置</string>
+    <string name="clear_cache">清除缓存</string>
+
 </resources>
